# chatgpt-image-studio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  db.py  main.py  models.py  security.py  seed.py
backend/app/routers/: auth.py  images.py  settings.py  users.py
backend/app/services/: openai_images.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/components/: AppShell.tsx  ImageCard.tsx  MaskCanvas.tsx  PromptComposer.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  Toast.tsx  index.ts
frontend/src/lib/: api.ts  auth.tsx  theme.tsx
frontend/src/pages/: AdminPage.tsx  EditPage.tsx  GalleryPage.tsx  GeneratePage.tsx  LoginPage.tsx  SettingsPage.tsx
