[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chatgptimage-backend"
version = "0.1.0"
description = "ChatGPT Image Studio backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.0",
    "Pillow==11.0.0",
    "aiofiles==24.1.0",
    "python-multipart==0.0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
